# Bacterial-growth-and-analysis

./: Bacterial_Growth_Simulation.py  README.md  pyproject.toml  requirements.txt
src/bacterial_growth/: __init__.py  classifier.py  data.py  features.py  growth_predictor.py  kinetics.py  pipeline.py  visualization.py
