[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bacterial-growth"
version = "2.0.0"
description = "SOTA predictive microbiology: growth kinetics modelling and species classification"
authors = [{ name = "Matheus Pullig Soranço de Carvalho" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "imbalanced-learn>=0.12",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "optuna>=3.6",
    "shap>=0.45",
    "matplotlib>=3.8",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
